attached_assets/Pasted-Web-Bundling-failed-1337ms-node-modules-expo-router-entry-js-716-modules-Metro-error-SyntaxErr-1754068539770_1754068539774.txt
Web Bundling failed 1337ms node_modules/expo-router/entry.js (716 modules)

Metro error: SyntaxError: /home/runner/workspace/app/data-entry.tsx: Unexpected token, expected "," (43:86)

  41 |   const { templateId, dataFileName, continueInput, fixedFieldValues } = useLocalSearchParams();
  42 |   const [template, setTemplate] = useState<Template | null>(null);
> 43 |   const [fixedFormData, setFixedFormData = useState<{ [fieldId: string]: string }>({});
     |                                                                                       ^
  44 |   const [variableFormData, setVariableFormData<{ [fieldId: string]: string }>({});
  45 |   const [showCamera, setShowCamera: useState<boolean>(false);
  46 |   const [currentBarcodeField, setCurrentBarcodeField: useState<string | null>(null);

  41 |   const { templateId, dataFileName, continueInput, fixedFieldValues } = useLocalSearchParams();
  42 |   const [template, setTemplate] = useState<Template | null>(null);
> 43 |   const [fixedFormData, setFixedFormData = useState<{ [fieldId: string]: string }>({});
     |                                                                                       ^
  44 |   const [variableFormData, setVariableFormData<{ [fieldId: string]: string }>({});
  45 |   const [showCamera, setShowCamera: useState<boolean>(false);
  46 |   const [currentBarcodeField, setCurrentBarcodeField: useState<string | null>(null);

Call Stack
  <unknown> (app/data-entry.tsx:43:87)
λ Bundling failed 1387ms node_modules/expo-router/node/render.js (1087 modules)
Web Bundled 183ms node_modules/expo-router/_error.js (285 modules)
Android Bundling failed 850ms node_modules/expo-router/entry.js (1246 modules)
 ERROR  SyntaxError: /home/runner/workspace/app/data-entry.tsx: Unexpected token, expected "," (43:86)

  41 |   const { templateId, dataFileName, continueInput, fixedFieldValues } = useLocalSearchParams();
  42 |   const [template, setTemplate] = useState<Template | null>(null);
> 43 |   const [fixedFormData, setFixedFormData = useState<{ [fieldId: string]: string }>({});
     |                                                                                       ^
  44 |   const [variableFormData, setVariableFormData<{ [fieldId: string]: string }>({});
  45 |   const [showCamera, setShowCamera: useState<boolean>(false);
  46 |   const [currentBarcodeField, setCurrentBarcodeField: useState<string | null>(null);